--- a/Document-Management-Web/src/main/resources/templates/agreement/index.html
+++ b/Document-Management-Web/src/main/resources/templates/agreement/index.html
@@ -6,5 +6,41 @@
 </head>
 <body>
     <h1 th:text="'Agreement Document'">Index Page.....</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Reg.Number</th>
+                <th>Reg.Date</th>
+                <th>Type-Document</th>
+                <th>State-Document</th>
+                <th>Type-Agreement</th>
+                <th>Deadline-Agreement</th>
+                <th>Contractor</th>
+                <th>Amount</th>
+                <th>Prepared-Person</th>
+                <th>Executed-Person</th>
+                <th>Number-Sheets</th>
+                <th>Summery</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr th:each="document : ${listDocuments}">
+                <td th:text="${document.id}"></td>
+                <td th:text="${document.registrationNumber}"></td>
+                <td th:text="${document.registrationDate}"></td>
+                <td th:text="${document.typeDocument}"></td>
+                <td th:text="${document.stateDocument}"></td>
+                <td th:text="${document.typeAgreement}"></td>
+                <td th:text="${document.deadlineAgreement}"></td>
+                <td th:text="${document.contractor}"></td>
+                <td th:text="${document.amount}"></td>
+                <td th:text="${document.prepared}"></td>
+                <td th:text="${document.executed}"></td>
+                <td th:text="${document.numberSheets}"></td>
+                <td th:text="${document.summery}"></td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
