displaying list of service documents and updating service controller. closes #15

--- a/Document-Management-Web/src/main/resources/templates/agreement/index.html
+++ b/Document-Management-Web/src/main/resources/templates/agreement/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1 th:text="'Agreement Document'">Index Page.....</h1>
-    <table>
+    <table border="3px">
         <thead>
             <tr>
                 <th>ID</th>
