--- a/Document-Management-Web/src/main/resources/templates/messages/index.html
+++ b/Document-Management-Web/src/main/resources/templates/messages/index.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Messages</title>
-</head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      th:replace="~{fragments/layout :: layout (~{::body},'posts')}">
 <body>
-    <h1 th:text="'Messages'">Index Page...</h1>
+    <h1 th:text="'Messages'" style="color:black">Index Page...</h1>
 </body>
 </html>
