--- a/Document-Management-Web/src/main/resources/templates/fragments/layout.html
+++ b/Document-Management-Web/src/main/resources/templates/fragments/layout.html
@@ -7,6 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <title>
+        Document Management System
+    </title>
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
@@ -33,7 +37,8 @@
 
                 <li class="nav-item mx-3" th:class="${'home'==menu ? 'active' : ''}">
                     <a class="nav-link" href="#"
-                       th:href="@{'/'}">
+                       th:href="@{'/'}"
+                        th:title="'Home Page'">
                         <span th:text="HOME">Home</span>
                     </a>
                 </li>
@@ -52,11 +57,11 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="#"
-                            th:href="@{'/Documents/agreementDocuments'}">
+                            th:href="@{'/documents/agreementDocuments'}">
                             <span th:text="'Agreement Document'">Agreement Document</span>
                         </a>
                         <a class="dropdown-item"
-                           th:href="@{'/Documents/serviceDocuments'}" href="#">
+                           th:href="@{'/documents/serviceDocuments'}" href="#">
                             <span th:text="'Service Document'">Service Document</span>
                         </a>
                     </div>
@@ -69,11 +74,11 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="#"
-                           th:href="@{'/Documents/agreementDocuments/find'}">
+                           th:href="@{'/documents/agreementDocuments/find'}">
                             <span th:text="'Agreement Document'">Agreement Document</span>
                         </a>
                         <a class="dropdown-item"
-                           th:href="@{'/Documents/serviceDocuments/find'}" href="#">
+                           th:href="@{'/documents/serviceDocuments/find'}" href="#">
                             <span th:text="'Service Document'">Service Document</span>
                         </a>
                     </div>
