changed bg color

--- a/Document-Management-Web/src/main/resources/templates/agreement/documentDetails.html
+++ b/Document-Management-Web/src/main/resources/templates/agreement/documentDetails.html
@@ -9,7 +9,7 @@
     <h2>Agreement Document Information</h2>
 
 
-    <table class="table table-striped table-bordered table-hover" th:object="${document}" >
+    <table class="table table-striped" th:object="${document}" >
         <tr>
             <th>Registration Number</th>
             <td><b th:text="*{registrationNumber}"></b></td>
