--- a/Document-Management-Web/src/main/resources/templates/fragments/layout.html
+++ b/Document-Management-Web/src/main/resources/templates/fragments/layout.html
@@ -20,6 +20,23 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <style>
+        body{
+            background-color: #F5F5F5;
+            color: #34302D;
+
+        }
+        a{
+            color: #5fa134;
+            font-weight: bold;
+            font-size: 20px;
+        }
+        a:hover{
+            color: #5fa134;
+
+        }
+    </style>
+
 </head>
 <body>
 
