Fixed Create or Update Agreement Document not working. closes #46

--- a/Document-Management-Web/src/main/resources/templates/agreement/agreementDocumentList.html
+++ b/Document-Management-Web/src/main/resources/templates/agreement/agreementDocumentList.html
@@ -29,7 +29,7 @@
                 <td th:text="${document.typeDocument}"></td>
                 <td th:text="${document.stateDocument}"></td>
                 <td th:text="${document.getPreparedPerson().firstName + ' ' + document.getPreparedPerson().lastName} "></td>
-                <td th:text="${document.getSingedPerson().firstName + ' ' + document.getSingedPerson().lastName}"></td>
+                <td th:text="${document.getSignedPerson().firstName + ' ' + document.getSignedPerson().lastName}"></td>
 
             </tr>
         </tbody>
