--- a/Document-Management-Web/src/main/resources/templates/agreement/documentDetails.html
+++ b/Document-Management-Web/src/main/resources/templates/agreement/documentDetails.html
@@ -28,7 +28,7 @@
         </tr>
         <tr>
             <th>Singed By</th>
-            <td th:text="${document.getSingedPerson().firstName + ' ' + document.getSingedPerson().lastName}"></td>
+            <td th:text="${document.getSignedPerson().firstName + ' ' + document.getSignedPerson().lastName}"></td>
         </tr>
         <tr>
             <th>Prepared By</th>
