Displayed Service Documents Record, and also Refactored layout page. closes #40

--- a/Document-Management-Web/src/main/resources/templates/agreement/agreementDocumentList.html
+++ b/Document-Management-Web/src/main/resources/templates/agreement/agreementDocumentList.html
@@ -13,10 +13,10 @@
             <tr>
                 <th style="color: white">Reg.Number</th>
                 <th style="color: white">Reg.Date</th>
-                <th style="width: 200px; color: white">Type-Document</th>
-                <th style="width: 200px; color: white">State-Document</th>
-                <th style="width: 150px; color: white">Prepared-Person</th>
-                <th style="width: 150px; color: white">Executed-Person</th>
+                <th style="width: 200px; color: white">Type Document</th>
+                <th style="width: 200px; color: white">State Document</th>
+                <th style="width: 150px; color: white">Prepared By</th>
+                <th style="width: 150px; color: white">Executed By</th>
             </tr>
         </thead>
         <tbody>
