--- a/Document-Management-Web/src/main/resources/templates/agreement/findDocument.html
+++ b/Document-Management-Web/src/main/resources/templates/agreement/findDocument.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en"  xmlns:th="http://www.thymeleaf.org"
-      th:replace="~{fragments/layout :: layout (~{::body},'documents')}">
+      th:replace="~{fragments/layout :: layout (~{::body},'findDocument')}">
 <body>
 
     <h2 style="margin-top: 20px; margin-bottom:5px">Find Documents</h2>
