Implemented Find Document by registration number, And display document details by document id. closes #41

--- a/Document-Management-Web/src/main/resources/templates/agreement/documentDetails.html
+++ b/Document-Management-Web/src/main/resources/templates/agreement/documentDetails.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
-      th:replace="~{fragments/layout :: layout (~{::body},'documents')}">
+      th:replace="~{fragments/layout :: layout (~{::body},'findDocument')}">
 <head>
     <meta charset="UTF-8">
     <title>View Agreement Document</title>
