--- a/Document-Management-Web/src/main/resources/templates/agreement/findDocument.html
+++ b/Document-Management-Web/src/main/resources/templates/agreement/findDocument.html
@@ -8,7 +8,7 @@
     <form action="" th:object="${document}",
           th:action="@{'/documents/agreementDocuments'}" method="get">
         <div class="form-group row">
-            <label class="col-sm-2 col-form-label">Enter Contractor Name</label>
+            <label class="col-sm-2 col-form-label">Contractor Name</label>
             <div class="col-sm-10">
                 <input class="form-control" th:field="*{contractor}" size="30"
                        maxlength="80" />
