--- a/Document-Management-Web/src/main/resources/templates/agreement/agreementDocumentList.html
+++ b/Document-Management-Web/src/main/resources/templates/agreement/agreementDocumentList.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <br>
-    <h1 th:text="'Agreement Document'">Index Page.....</h1>
+    <h1 th:text="'Agreement Document'" style="margin-bottom: 10px">Index Page.....</h1>
     <table class="table table-striped">
         <thead class="thead-dark">
             <tr>
