Implemented displaying post details. #44

--- a/Document-Management-Web/src/main/resources/templates/fragments/layout.html
+++ b/Document-Management-Web/src/main/resources/templates/fragments/layout.html
@@ -22,7 +22,7 @@
 
     <style>
         body{
-            background-color: #F5F5F5;
+            background-color: rgb(218, 218, 227);
             color: #34302D;
 
         }
