--- a/Document-Management-Web/src/main/resources/templates/messages/posts.html
+++ b/Document-Management-Web/src/main/resources/templates/messages/posts.html
@@ -2,6 +2,14 @@
       th:replace="~{fragments/layout :: layout (~{::body},'posts')}">
 <body>
     <br>
+    <div class="container">
+        <div class="row justify-content-end">
+            <div class="col-md-4">
+                <a th:href="@{'/posts/find'}" href="#" class="btn btn-primary">Search</a>
+            </div>
+        </div>
+    </div>
+    <br>
     <table class="table table-striped table-hover">
         <thead class="thead-dark">
         <tr>
