Implemented ability to create and update post. And also added message dto's converter. closes #45

--- a/Document-Management-Web/src/main/resources/templates/messages/postDetails.html
+++ b/Document-Management-Web/src/main/resources/templates/messages/postDetails.html
@@ -45,6 +45,9 @@
                         </div>
                     </div>
                 </div>
+                <br>
+                <a class="btn btn-primary" href="#" th:href="@{'/posts/' + *{id} + '/edit'}">Edit Post</a>
+                <br><br>
             </div>
         </div>
     </div>
