--- a/Document-Management-Web/src/main/resources/templates/agreement/createOrUpdateDocument.html
+++ b/Document-Management-Web/src/main/resources/templates/agreement/createOrUpdateDocument.html
@@ -18,7 +18,9 @@
             <label class="col-sm-2 col-form-label">Registration Date</label>
             <div class="col-sm-10">
                 <input class="form-control" th:field="*{registrationDate}" size="30"
-                       maxlength="80" type="hidden"/>
+                       maxlength="80" type="date"
+                       placeholder="YYYY-MM-DD" title="Enter a date in this format: YYYY-MM-DD"
+                       pattern="(?:19|20)[0-9]{2}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1[0-9]|2[0-9])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:30))|(?:(?:0[13578]|1[02])-31))"/>
             </div>
         </div>
         <div class="form-group row">
@@ -75,8 +77,9 @@
         <div class="form-group row">
             <label class="col-sm-2 col-form-label">Deadline Agreement</label>
             <div class="col-sm-10">
-                <input class="form-control" th:field="*{deadlineAgreement}" size="30"
-                       maxlength="80" type="hidden"/>
+                <input class="form-control" type="date" th:field="*{deadlineAgreement}" size="30"
+                       maxlength="80"
+                       title="Enter a date in this format: YYYY-MM-DD"/>
             </div>
         </div>
         <div class="form-group row">
